test/classes/errors/newValueNotType3.good
newValueNotType3.chpl:7: error: type in 'new' expression is missing its argument list
